# cpp_compatibility

./: .gitignore  CMakeLists.txt  README.md
include/code/cpp_compatibility/: addressof.hpp  bind.hpp  is_placeholder.hpp  memory.hpp  placeholders.hpp  type_traits.hpp
include/code/cpp_compatibility/std/: functional  memory  type_traits
include/public/: prolog.hpp
include/public/cpp_compatibility/: addressof.hpp  adopt_lock.hpp  adopt_lock_t.hpp  allocate_shared.hpp  bad_function_call.hpp  bind_front.hpp  bit_not.hpp  bool_constant.hpp  call_once.hpp  chrono.hpp  constexpr.hpp  cpp11_features.hpp  cpp14_features.hpp  cpp17_features.hpp  cpp20_features.hpp  cppdraft_features.hpp  cref.hpp  defer_lock.hpp  defer_lock_t.hpp  dialect.hpp  enable_shared_from_this.hpp  external_warnings_reset.hpp  external_warnings_silence.hpp  filesystem.hpp  function.hpp  hash.hpp  hash_thread_id.hpp  hash_type_index.hpp  if_constexpr.hpp  integral_constant.hpp  invoke.hpp  is_bind_expression.hpp  is_placeholder.hpp  jthread.hpp  keywords.hpp  latest_features.hpp  lock.hpp  lock_guard.hpp  lock_types.hpp  make_shared.hpp  (+45 more)
include/public/cpp_compatibility/detail/: pthread_mutex.hpp  windows_mutex.hpp
include/public/cpp_compatibility/keywords/: addressof.hpp  constexpr.hpp  constexpr_if.hpp  noexcept.hpp  nullptr.hpp
include/public/cpp_compatibility/std/: algorithm  chrono  filesystem  functional  memory  mutex  ratio  shared_mutex  stop_token  thread  tuple  type_traits  typeindex  utility
